--- a/Pages/TeamData/Others.cshtml
+++ b/Pages/TeamData/Others.cshtml
@@ -4,8 +4,10 @@
     ViewData["Title"] = "Other team data";
 }
 
+<!-- Page showing other types of statistics -->
 <h2 class="section-title">Other Team Data</h2>
 
+<!-- Navigation Buttons -->
 <div class="buttons">
     <a class="btn" href="/TeamData/Schedule">Schedule</a>
     <a class="btn" href="/TeamData/WinTrends">Win Trends</a>
