--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -3,6 +3,6 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @* 
-El archivo _ViewImports.cshtml sirve para importar espacios de nombres, 
-directivas y configuraciones comunes a todas las vistas. Es como un archivo de configuración que evita repetir código en cada vista. 
+The _ViewImports.cshtml file is used to import namespaces, directives, and configurations common to all views. 
+It is like a configuration file that avoids repeating code in each view.
 *@
