--- a/Pages/_ViewStart.cshtml
+++ b/Pages/_ViewStart.cshtml
@@ -2,4 +2,4 @@
     Layout = "_Layout";
 }
 
-@* Determina la configuración inicial para las vistas, como el diseño o layout que usarán por defecto. *@
+@* Determines the initial configuration for views, such as the default layout they will use. *@
